Grace/tests/gibbs/errors/t094.grace
// ERROR = P1001
def x
